emulation: Drop support for default/UTF-8 character set escape sequences

https://bugzilla.gnome.org/show_bug.cgi?id=731208